macro/src/snapshots/rust_sitter_macro__tests__enum_recursive.snap
---
source: macro/src/lib.rs
expression: "rustfmt_code(&expand_grammar(parse_quote!\n{\n    #[rust_sitter::grammar(\"test\")] mod grammar\n    {\n        #[rust_sitter::language] pub enum Expression\n        {\n            Number(#[rust_sitter::leaf(pattern = r\"\\d+\", transform = |v|\n            v.parse().unwrap())] i32),\n            Neg(#[rust_sitter::leaf(text = \"-\")] (), Box<Expression>),\n        }\n    }\n})? .to_token_stream().to_string())"
---
mod grammar {
    pub enum Expression {
        Number(i32),
        Neg((), Box<Expression>),
    }
    impl ::rust_sitter::Extract<Expression> for Expression {
        type LeafOut = ();
        #[allow(non_snake_case)]
        fn extract(
            node: Option<::rust_sitter::tree_sitter::Node>,
            source: &[u8],
            _last_idx: usize,
            _leaf_fn: Option<fn(&str) -> Self::LeafOut>,
        ) -> Self {
            let node = node.unwrap();
            let mut cursor = node.walk();
            assert!(
                cursor.goto_first_child(),
                "Could not find a child corresponding to any enum branch"
            );
            loop {
                let node = cursor.node();
                match node.kind() {
                    "Expression_Number" => {
                        return ::rust_sitter::__private::extract_struct_or_variant(
                            node,
                            move |cursor, last_idx| {
                                Expression::Number({
                                    ::rust_sitter::__private::extract_field::<
                                        rust_sitter::WithLeaf<i32>,
                                        _,
                                    >(
                                        cursor, source, last_idx, "0", Some(|v| v.parse().unwrap())
                                    )
                                })
                            },
                        )
                    }
                    "Expression_Neg" => {
                        return ::rust_sitter::__private::extract_struct_or_variant(
                            node,
                            move |cursor, last_idx| {
                                Expression::Neg(
                                    {
                                        ::rust_sitter::__private::extract_field::<(), _>(
                                            cursor, source, last_idx, "0", None,
                                        )
                                    },
                                    {
                                        ::rust_sitter::__private::extract_field::<Box<Expression>, _>(
                                            cursor, source, last_idx, "1", None,
                                        )
                                    },
                                )
                            },
                        )
                    }
                    _ => {
                        if !cursor.goto_next_sibling() {
                            panic!("Could not find a child corresponding to any enum branch")
                        }
                    }
                }
            }
        }
    }
    extern "C" {
        fn tree_sitter_test() -> ::rust_sitter::tree_sitter::Language;
    }
    pub fn language() -> ::rust_sitter::tree_sitter::Language {
        unsafe { tree_sitter_test() }
    }
    #[doc = r" Parse an input string according to the grammar. Returns either any parsing errors that happened, or a"]
    #[doc = "[`Expression`]"]
    #[doc = r" instance containing the parsed structured data."]
    pub fn parse(
        input: &str,
    ) -> core::result::Result<Expression, Vec<::rust_sitter::errors::ParseError>> {
        ::rust_sitter::__private::parse::<Expression>(input, language)
    }
}
