macro/src/snapshots/rust_sitter_macro__tests__enum_with_unamed_vector.snap
---
source: macro/src/lib.rs
expression: "rustfmt_code(&expand_grammar(parse_quote!\n{\n    #[rust_sitter::grammar(\"test\")] mod grammar\n    {\n        pub struct Number\n        {\n            #[rust_sitter::leaf(pattern = r\"\\d+\", transform = |v|\n            v.parse().unwrap())] value: u32\n        } #[rust_sitter::language] pub enum Expr\n        { Numbers(#[rust_sitter::repeat(non_empty = true)] Vec<Number>) }\n    }\n})? .to_token_stream().to_string())"
---
mod grammar {
    pub struct Number {
        value: u32,
    }
    impl ::rust_sitter::Extract<Number> for Number {
        type LeafOut = ();
        #[allow(non_snake_case)]
        fn extract(
            node: Option<::rust_sitter::tree_sitter::Node>,
            source: &[u8],
            last_idx: usize,
            _leaf_fn: Option<fn(&str) -> Self::LeafOut>,
        ) -> Self {
            let node = node.unwrap();
            ::rust_sitter::__private::extract_struct_or_variant(node, move |cursor, last_idx| {
                Number {
                    value: {
                        ::rust_sitter::__private::extract_field::<rust_sitter::WithLeaf<u32>, _>(
                            cursor,
                            source,
                            last_idx,
                            "value",
                            Some(|v| v.parse().unwrap()),
                        )
                    },
                }
            })
        }
    }
    pub enum Expr {
        Numbers(Vec<Number>),
    }
    impl ::rust_sitter::Extract<Expr> for Expr {
        type LeafOut = ();
        #[allow(non_snake_case)]
        fn extract(
            node: Option<::rust_sitter::tree_sitter::Node>,
            source: &[u8],
            _last_idx: usize,
            _leaf_fn: Option<fn(&str) -> Self::LeafOut>,
        ) -> Self {
            let node = node.unwrap();
            let mut cursor = node.walk();
            assert!(
                cursor.goto_first_child(),
                "Could not find a child corresponding to any enum branch"
            );
            loop {
                let node = cursor.node();
                match node.kind() {
                    "Expr_Numbers" => {
                        return ::rust_sitter::__private::extract_struct_or_variant(
                            node,
                            move |cursor, last_idx| {
                                Expr::Numbers({
                                    ::rust_sitter::__private::extract_field::<Vec<Number>, _>(
                                        cursor, source, last_idx, "0", None,
                                    )
                                })
                            },
                        )
                    }
                    _ => {
                        if !cursor.goto_next_sibling() {
                            panic!("Could not find a child corresponding to any enum branch")
                        }
                    }
                }
            }
        }
    }
    extern "C" {
        fn tree_sitter_test() -> ::rust_sitter::tree_sitter::Language;
    }
    pub fn language() -> ::rust_sitter::tree_sitter::Language {
        unsafe { tree_sitter_test() }
    }
    #[doc = r" Parse an input string according to the grammar. Returns either any parsing errors that happened, or a"]
    #[doc = "[`Expr`]"]
    #[doc = r" instance containing the parsed structured data."]
    pub fn parse(
        input: &str,
    ) -> core::result::Result<Expr, Vec<::rust_sitter::errors::ParseError>> {
        ::rust_sitter::__private::parse::<Expr>(input, language)
    }
}
